feat: Introduce the Poetiq architecture with parallel workers, aggregation, and self-refinement, and implement a comprehensive memory system including reflection, evolution, and skill harvesting.

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ sandbox/
 outputs/debug_logs/
 outputs/benchmark_*.json
 outputs/vector_memory*/
-outputs/*.json
+# outputs/*.json  # Temporarily disabled for analysis
