feat: Two-phase tool selection + Memory Curator Agent + Tool Schemas
- Added two-phase tool selection: suggested tools get full schema, others lightweight list
- Created tools/schemas/*.json with error_hints for each tool
- Added ToolSchemaLoader for dynamic schema loading
- Implemented MemoryCuratorAgent (background curation every 5 iterations)
- Curator uses heuristic merge (no LLM calls in background)
- Added apply_decay() to MemoryGraph
- Integrated record_tool_error() in executor
- Updated .gitignore for sessions, outputs, models, logs
- Updated README and architecture docs

--- a/.gitignore
+++ b/.gitignore
@@ -10,21 +10,34 @@ venv/
 .venv
 env.bak/
 venv.bak/
+
+# Server
 server/
 server
+
+# Build artifacts & logs
+build_log.txt
+*.log
+
+# Models (too large for git)
+models/
+
 # Project specific
 .gemini/
-sandbox/
 logs/
 pip_cache/
-# Data - Persistent learning (optional to commit)
-data/
 
 # Sandbox - Test files
 sandbox/
 
-# Outputs - Ignore transient files but keep sessions
-outputs/debug_logs/
-outputs/benchmark_*.json
-outputs/vector_memory*/
-# outputs/*.json  # Temporarily disabled for analysis
+# Data - Persistent learning (don't share personal data)
+data/
+
+# Outputs - All transient files (still readable locally)
+outputs/
+
+# Checkpoints
+autonomous_checkpoint.json
+
+# Private notes
+docs/PRIVATE_ROADMAP.md
