--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-openai
-requests
-chromadb
-pandas==2.1.0
-numpy
-llama-cpp-python
-networkx
-flask
+# Core dependencies
+requests>=2.28.0
+openai>=1.0.0
+
+# Vector database for memory
+chromadb>=0.4.0
+
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Memory graph
+networkx>=3.0
+
+# Dashboard UI
+flask>=2.3.0
+
+# Optional: Local LLM (uncomment if using llama-cpp-python directly)
+# llama-cpp-python>=0.2.0
